# idea-factory

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
infrastructure/cloudflare/: cloudflared.service  config.yml.template  setup.sh
mcp-personas/: christensen-mcp
server/: db.ts  index.ts
server/services/: enrichment.ts  evaluation.ts
src/: App.tsx  main.py
src/api/: chat.py  ideas.py  reviews.py  status.py  users.py
src/auth/: __init__.py  middleware.py  netlify_jwt.py  rate_limit.py
src/components/: IdeaCard.tsx  IdeaForm.tsx
src/core/: models.py  state_machine.py
src/db/: repository.py  schema.sql
src/integrations/: __init__.py  google_drive.py  s3_storage.py
src/mcp/: bridge.py
src/notifications/: __init__.py  email.py  service.py  slack.py
src/pipeline/: building.py  enrichment.py  evaluation.py  orchestrator.py  project_analysis.py  scaffolding.py
